# spams-cython

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
cyspams/: __init__.py  interfaces.h  interfaces.pxd
cyspams/include/nnls/: nnls.h
cyspams/include/spams/: spams.h
cyspams/include/spams/decomp/: decomp.h
cyspams/include/spams/linalg/: misc.h
