[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cyspams"
version = "1.0.0"
description = "SPArse Modeling Software (SPAMS) interfaces for Cython"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = ["importlib-metadata; python_version<'3.8'"]

[tool.setuptools]
packages = ["cyspams"]
include-package-data = true
