[metadata]
name = spams-cython
version = 1.0.0
url = https://github.com/getspams/spams-cython
download_url = https://pypi.org/project/spams-cython
project_urls =
    Homepage = https://github.com/getspams/spams-cython
    Documentation = https://github.com/getspams/spams-cython/blob/main/README.md
    Source = https://github.com/getspams/spams-cython
    Changelog = https://github.com/getspams/spams-cython/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/spams-cython
    Tracker = https://github.com/getspams/spams-cython/issues
author = getspams
# author_email =
maintainer = getspams
# maintainer_email =
# classifiers = 
#     Topic :: Scientific/Engineering :: Image Processing
#     Topic :: Scientific/Engineering :: Medical Science Apps.
#     Topic :: Scientific/Engineering :: Bio-Informatics
#     Programming Language :: Python
#     Programming Language :: Cython
license = BSD 3-Clause License
license_files = LICENSE
description = SPArse Modeling Software (SPAMS) Cython interface
long_description = file: README.md
long_description_content_type = text/markdown
# keywords =
#     Neuroimaging
#     Diffusion MRI
#     Microstructure Imaging
#     Convex Optimization
#     NODDI
#     SANDI
platforms =
    Windows
    MacOS
    Linux

[options]
install_requires =
    importlib-metadata; python_version<"3.8"
python_requires = >=3.6
packages = cyspams
include_package_data = True
