[metadata]
name = spams-cython
version = 1.0.0
url = https://github.com/getspams/spams-cython
download_url = https://pypi.org/project/spams-cython
project_urls =
    Homepage = https://github.com/getspams/spams-cython
    Documentation = https://github.com/getspams/spams-cython/blob/main/README.md
    Source = https://github.com/getspams/spams-cython
    Download = https://pypi.org/project/spams-cython
    Tracker = https://github.com/getspams/spams-cython/issues
author = Clorindo Notte
author_email = clorindo.notte@univr.it
maintainer = Clorindo Notte
maintainer_email = clorindo.notte@univr.it
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: C++
license = BSD 3-Clause License
license_files =
    LICENSE
description = SPArse Modeling Software (SPAMS) Cython interface
long_description = file: README.md
long_description_content_type = text/markdown
platforms =
    Windows
    MacOS
    Linux

[options]
zip_safe = False
install_requires =
    importlib-metadata>=4.8.3; python_version<"3.8"
python_requires = >=3.6
include_package_data = True
packages =
    cyspams
